simplify middle wares
